@@ -1,5 +1,10 @@
 2008-02-13  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs,
+	  Mono.TextEditor/TextEditor.cs: Optimized drawing.
+
+2008-02-13  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs: Fixed
 	  drawing glicht caused by false adjustment.
 
